<resources>
    <string name="app_name">Syosetsu Reader</string>

    <string name="nav_draw_open">Open</string>
    <string name="nav_draw_close">Close</string>

    <string name="drawer_head_title">ログイン</string>

    <string name="site_novel">小説を読もう</string>
    <string name="site_novel18">ノクターンノベルズ</string>

    <string name="type_short">短編</string>
    <string name="type_series">連載</string>

    <string name="source_cache">Cache ver</string>
    <string name="source_download">Download ver</string>
    <string name="source_network">Network ver</string>

    <string name="favorite">お気に入り</string>
    <string name="history">閲覧履歴</string>
    <string name="download">ダウンロード</string>

    <string name="novel">小説</string>
    <string name="author">作者</string>
    <string name="novel_info">小説情报</string>
    <string name="settings">設定</string>
    <string name="login">ログイン</string>
    <string name="about">このアプリについて</string>

    <string name="list_footer_error">エラーが発生しました。</string>
    <string name="list_footer_nomore">NO MORE DATA</string>

    <string name="search_hint_keyword">検索キーワード、Ｎコード</string>
    <string name="search_hint_ex_keyword">排除キーワード</string>

    <string name="search_settings_normal">基本設定</string>
    <string name="search_settings_sort">並び替え：</string>
    <string name="search_settings_type">種別：</string>
    <string name="search_settings_illust">挿絵のある作品</string>
    <string name="search_settings_pickup">ピックアップ作品</string>
    <string name="search_settings_ex_suspend">長期連載停止中を除外する</string>

    <string name="search_settings_advance">高級設定</string>
    <string name="search_settings_keyword_range">キーワード検索範囲指定：</string>
    <string name="search_settings_range_title">作品名</string>
    <string name="search_settings_range_summary">あらすじ</string>
    <string name="search_settings_range_keyword">キーワード</string>
    <string name="search_settings_range_author">作者名</string>
    <string name="search_settings_genre">ジャンル選択：</string>
    <string name="search_settings_genre_hf">ハイファンタジー</string>
    <string name="search_settings_genre_real">現実世界</string>
    <string name="search_settings_genre_vrsf">VRゲーム</string>
    <string name="search_settings_ex_cond">抽出/除外条件：</string>
    <string name="search_settings_cond_r15">R15</string>
    <string name="search_settings_cond_cruel">残酷な描写あり</string>
    <string name="search_settings_cond_bl">ボーイズラブ</string>
    <string name="search_settings_cond_gl">ガールズラブ</string>
    <string name="search_settings_cond_re">異世界転生</string>
    <string name="search_settings_cond_tr">異世界転移</string>

    <string name="prefix_author">作者：</string>
    <string name="prefix_genre">ジャンル：</string>
    <string name="prefix_keyword">キーワード：</string>
    <string name="prefix_lastupdate">最終更新日：</string>
    <string name="prefix_readtime">読了時間：</string>
    <string name="prefix_weekuu">週別ユニークユーザ：</string>
    <string name="prefix_review">レビュー数：</string>
    <string name="prefix_ncode">Nコード：</string>
    <string name="prefix_overall">総合評価ポイント：</string>
    <string name="prefix_rankuc">評価人数：</string>
    <string name="prefix_rankpoint">評価点：</string>
    <string name="prefix_bookmark">ブックマーク：</string>

    <string name="contribute_pc">PC投稿</string>
    <string name="contribute_mb">ケータイ投稿</string>
    <string name="contribute_illust">挿絵あり</string>

    <string name="sort_new">新着更新順</string>
    <string name="sort_weekly">週間ユニークアクセスが多い順</string>
    <string name="sort_favnovelcnt">ブックマーク登録の多い順</string>
    <string name="sort_reviewcnt">レビューの多い順</string>
    <string name="sort_hyoka">総合評価の高い順</string>
    <string name="sort_dailypoint">日間ポイントの高い順</string>
    <string name="sort_weeklypoint">週間ポイントの高い順</string>
    <string name="sort_monthlypoint">月間ポイントの高い順</string>
    <string name="sort_quarterpoint">四半期ポイントの高い順</string>
    <string name="sort_yearlypoint">年間ポイントの高い順</string>
    <string name="sort_hyokacnt">評価者数の多い順</string>
    <string name="sort_lengthdesc">文字数の多い順</string>
    <string name="sort_ncodedesc">新着投稿順</string>
    <string name="sort_old">更新古い順</string>

    <string name="type_all">すべての種別</string>
    <string name="type_short_only">短編のみ</string>
    <string name="type_end_only">完結済のみ(短編小説含む)</string>
    <string name="type_serializing_only">連載中小説のみ</string>
    <string name="type_all_serial">すべての連載小説</string>
    <string name="type_end_serial_only">完結済連載小説のみ</string>

    <string name="font_default">Default</string>


    <string name="age_cert">年齢認証</string>
    <string name="age_cert_tip">
        18歳未満（高校生以下）の方の立ち入りを禁じます。 あなたは18歳以上ですか？
    </string>

    <string name="ssl_tip">
        このページは、サーバ証明書により実在性が認証されています。
        SSLページでは通信が暗号化され、プライバシーが守られています。
    </string>

    <string name="default_search_url">https://www.baidu.com/s?word=</string>

    <string name="settings_title_theme">テーマ</string>
    <string name="settings_nightmode_title">夜間モード</string>
    <string name="settings_nightmode_summary">可开启夜间模式。一些页面可能会重新加载</string>
    <string name="settings_nightmode_fs_title">夜間モード（FOLLOW SYSTEM）</string>
    <string name="settings_nightmode_fs_summary">可跟随系统开启夜间模式。一些页面可能会重新加载</string>

    <string name="settings_title_view">ビュー</string>
    <string name="settings_netsearch_title">网页搜索</string>
    <string name="settings_netsearch_summary">当点击文本菜单的“网页搜索”时，将使用这里设置的URL进行搜索</string>
    <string name="settings_netsearch_dialogmsg">请在这里输入网址，要搜索的内容请使用 $1 来表示。或者只输入网址，此时搜索内容将附在网址后面。</string>

    <string name="settings_title_local">本地存储</string>
    <string name="settings_clearcache_title">清除缓存</string>
    <string name="settings_clearcache_summary">清除图片和文本缓存</string>
    <string name="settings_clearhis_title">清除历史纪录</string>
    <string name="settings_clearhis_summary">清除您曾查看过的小说的记录</string>
    <string name="settings_clearlogin_title">ログアウト</string>
    <string name="settings_clearlogin_summary">清除登陆信息</string>

    <string name="settings_title_other">その他</string>
    <string name="settings_about_title">@string/about</string>

    <string name="about_title">SyosetuReader</string>
    <string name="about_intro">
        小説家になろう 网站的一个简单客户端。\n作者: ucclkp(ucclkp@163.com)
    </string>
    <string name="about_opensource_title">开放源代码许可</string>
    <string name="about_os_android_sdk">Android SDK</string>
    <string name="about_os_android_support_library">Android Support Library</string>
    <string name="about_os_disklrucache">DiskLruCache</string>

</resources>