<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_title_theme">

        <SwitchPreference
            android:defaultValue="false"
            android:key="sp_night_mode"
            android:summary="@string/settings_nightmode_summary"
            android:title="@string/settings_nightmode_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="sp_night_mode_fs"
            android:summary="@string/settings_nightmode_fs_summary"
            android:title="@string/settings_nightmode_fs_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_title_view">

        <EditTextPreference
            android:defaultValue="@string/default_search_url"
            android:dialogMessage="@string/settings_netsearch_dialogmsg"
            android:key="search_url"
            android:summary="@string/settings_netsearch_summary"
            android:title="@string/settings_netsearch_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_title_local">

        <Preference
            android:key="clear_cache"
            android:summary="@string/settings_clearcache_summary"
            android:title="@string/settings_clearcache_title" />

        <Preference
            android:key="clear_history"
            android:summary="@string/settings_clearhis_summary"
            android:title="@string/settings_clearhis_title" />

        <Preference
            android:key="clear_login"
            android:enabled="false"
            android:summary="@string/settings_clearlogin_summary"
            android:title="@string/settings_clearlogin_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_title_other">

        <Preference
            android:defaultValue="false"
            android:key="other_about"
            android:title="@string/settings_about_title" />

    </PreferenceCategory>

</PreferenceScreen>
