<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/section_1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_read_novel"
            android:icon="@drawable/ic_home"
            android:title="@string/site_novel"/>

        <item
            android:id="@+id/drawer_read_novel18"
            android:title="@string/site_novel18"
            android:visible="true"/>

    </group>

    <group
        android:id="@+id/section_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite"/>

        <item
            android:id="@+id/drawer_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history"/>

        <item
            android:id="@+id/drawer_download"
            android:icon="@drawable/ic_download"
            android:title="@string/download"/>

    </group>

    <group
        android:id="@+id/section_3"
        android:checkableBehavior="none">

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

    </group>

</menu>