<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ucclkp.syosetureader.about.AboutFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/about_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_intro_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/about_intro"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="15sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_os_title_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/about_opensource_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/bt_os_as_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:paddingBottom="10dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/about_os_android_sdk"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/bt_os_asl_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingBottom="10dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:text="@string/about_os_android_support_library"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/bt_os_dlc_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:background="?attr/selectableItemBackground"
                android:paddingBottom="10dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:text="@string/about_os_disklrucache"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="15sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
