<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchFragment">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_search_fragment_scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/color_cardview"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:text="@string/search_settings_normal"
                        android:textColor="?android:attr/colorAccent"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_settings_sort"
                            android:textColor="?android:attr/textColorPrimary"/>

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/sp_base_sort"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/search_sort_name"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_settings_type"
                            android:textColor="?android:attr/textColorPrimary"/>

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/sp_base_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="28dp"
                            android:entries="@array/search_type_name"/>
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/cb_base_illustration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/search_settings_illust"
                        android:textColor="?android:attr/textColorPrimary"/>

                    <CheckBox
                        android:id="@+id/cb_base_pickup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_settings_pickup"
                        android:textColor="?android:attr/textColorPrimary"/>

                    <CheckBox
                        android:id="@+id/cb_base_ex_suspend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_settings_ex_suspend"
                        android:textColor="?android:attr/textColorPrimary"/>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/sc_switch_adv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:checked="false"
                        android:text="@string/search_settings_advance"
                        android:textColor="?android:attr/textColorPrimary"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_adv_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/color_cardview"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:text="@string/search_settings_advance"
                        android:textColor="?android:attr/colorAccent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/search_settings_keyword_range"
                        android:textColor="?android:attr/textColorPrimary"/>

                    <CheckBox
                        android:id="@+id/cb_adv_searchfrom_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/search_settings_range_title"
                        android:textColor="?android:attr/textColorPrimary"/>

                    <CheckBox
                        android:id="@+id/cb_adv_searchfrom_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_settings_range_summary"
                        android:textColor="?android:attr/textColorPrimary"/>

                    <CheckBox
                        android:id="@+id/cb_adv_searchfrom_kw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_settings_range_keyword"
                        android:textColor="?android:attr/textColorPrimary"/>

                    <CheckBox
                        android:id="@+id/cb_adv_searchfrom_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_settings_range_author"
                        android:textColor="?android:attr/textColorPrimary"/>

                    <LinearLayout
                        android:id="@+id/ll_adv_exp_con_condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/search_settings_ex_cond"
                            android:textColor="?android:attr/textColorPrimary"/>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/search_settings_cond_r15"
                                android:textColor="?android:attr/textColorPrimary"/>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:orientation="horizontal">

                                <CheckBox
                                    android:id="@+id/cb_adv_notr15"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/color_except"/>

                                <CheckBox
                                    android:id="@+id/cb_adv_isr15"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/search_settings_cond_cruel"
                                android:textColor="?android:attr/textColorPrimary"/>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:orientation="horizontal">

                                <CheckBox
                                    android:id="@+id/cb_adv_notcruel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/color_except"/>

                                <CheckBox
                                    android:id="@+id/cb_adv_iscruel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/search_settings_cond_bl"
                                android:textColor="?android:attr/textColorPrimary"/>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:orientation="horizontal">

                                <CheckBox
                                    android:id="@+id/cb_adv_notbl"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/color_except"/>

                                <CheckBox
                                    android:id="@+id/cb_adv_isbl"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/search_settings_cond_gl"
                                android:textColor="?android:attr/textColorPrimary"/>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:orientation="horizontal">

                                <CheckBox
                                    android:id="@+id/cb_adv_notgl"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/color_except"/>

                                <CheckBox
                                    android:id="@+id/cb_adv_isgl"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/search_settings_cond_re"
                                android:textColor="?android:attr/textColorPrimary"/>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:orientation="horizontal">

                                <CheckBox
                                    android:id="@+id/cb_adv_notre"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/color_except"/>

                                <CheckBox
                                    android:id="@+id/cb_adv_isre"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/search_settings_cond_tr"
                                android:textColor="?android:attr/textColorPrimary"/>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:orientation="horizontal">

                                <CheckBox
                                    android:id="@+id/cb_adv_nottrans"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/color_except"/>

                                <CheckBox
                                    android:id="@+id/cb_adv_istrans"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>

                        </FrameLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/panel_search_keyword"/>

</FrameLayout>